--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.8.1
 Django==5.0.6
-django-autocomplete-light==3.11.0
+django-smart-selects==1.7.2
 django-widget-tweaks==1.5.0
 pillow==10.3.0
 psycopg2-binary==2.9.9
