--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ db.py
 #Ignore vars.py file
 vars.py
 #Ignore static/lib folder
-static/lib/
+# static/lib/
 #Ignore pycache
 *.pyc
 __pycache__/__pycache__
